--- a/2. Second task/source/sass/blocks/museums.scss
+++ b/2. Second task/source/sass/blocks/museums.scss
@@ -149,6 +149,7 @@ select {
   .museums__wrapper select {
     font-size: $font14;
     line-height: $line18;
+    width: 60px;
     background-color: transparent;
     border: none;
     appearance: none;
@@ -236,6 +237,42 @@ select {
     &:nth-child(5),
     &:nth-child(6) {
       display: block;
+    }
+
+    &:nth-child(10) {
+      order: 7;
+    }
+
+    &:nth-child(11) {
+      order: 8;
+    }
+
+    &:nth-child(12) {
+      order: 9;
+    }
+
+    &:nth-child(6) {
+      order: 10;
+    }
+
+    &:nth-child(13) {
+      order: 11;
+    }
+
+    &:nth-child(5) {
+      order: 12;
+    }
+
+    &:nth-child(14) {
+      order: 13;
+    }
+
+    &:nth-child(4) {
+      order: 14;
+    }
+
+    &:nth-child(15) {
+      order: 15;
     }
   }
 }
