--- a/2. Second task/source/sass/blocks/slider.scss
+++ b/2. Second task/source/sass/blocks/slider.scss
@@ -79,5 +79,10 @@
       transform: translateX(0);
     }
   }
+}
 
+@media (min-width: $width-desktop) {
+  .slider__item {
+    background-image: url("../img/slider-bg-desktop.jpg");
+  }
 }
