--- a/2. Second task/source/sass/blocks/main.scss
+++ b/2. Second task/source/sass/blocks/main.scss
@@ -19,6 +19,10 @@
   margin-bottom: 24px;
 }
 
+.main__museums {
+  margin-bottom: 47px;
+}
+
 @media (min-width: $width-tablet) {
   .main__breadcrumbs {
     margin-bottom: 11px;
@@ -43,5 +47,27 @@
     border-bottom: 1px solid #e2e2e2;
   }
 
+  .main__museums {
+    margin-bottom: 16px;
+  }
+}
+
+@media (min-width: $width-desktop) {
+  .main__breadcrumbs {
+    margin-bottom: 17px;
+  }
+
+  .main__title {
+    font-size: $font40;
+    padding-bottom: 1px;
+  }
+
+  .main__wrapper {
+    justify-content: flex-end;
+  }
+
+  .main__museums {
+    margin-bottom: 127px;
+  }
 }
 
