--- a/2. Second task/source/index.pug
+++ b/2. Second task/source/index.pug
@@ -10,9 +10,6 @@ html(lang="ru")
     link(href="/fonts/SourceSansPro-Regular.woff2" as="font" rel="preload" crossorigin="anonymous")
     link(href="/fonts/SourceSansPro-SemiBold.woff2" as="font" rel="preload" crossorigin="anonymous")
     link(href="/fonts/Actor-Regular.woff2" as="font" rel="preload" crossorigin="anonymous")
-    //- script
-    //-   // Picture element HTML5 shiv
-    //-   - document.createElement("picture");
     script(src="js/picturefill.min.js" async)
 
   body.main-page
@@ -187,11 +184,7 @@ html(lang="ru")
 
         //- Карта
         section.map
-          iframe.map-popup__iframe(src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6122088171858!2d30.32330489093596!3d59.93857674840233!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1538679898464" width="100%" height="100%" border="none" allowfullscreen="")
-
-
-    //- div(style="display: none;")
-    //-   include(src="build/img/svg-sprite.svg")
+          iframe.map__iframe.map__iframe--nojs(src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6122088171858!2d30.32330489093596!3d59.93857674840233!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1538679898464" width="100%" height="100%" border="none" allowfullscreen="")
 
     // Попапы
     .filter-mobile
@@ -237,6 +230,6 @@ html(lang="ru")
         .site-wrapper
           button.map-popup__button.map-popup__button--left List
           button.map-popup__button.map-popup__button--right Filter
-      iframe.map-popup__iframe(src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6122088171858!2d30.32330489093596!3d59.93857674840233!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1538679898464" width="100%" height="100%" border="none" allowfullscreen="")
+      iframe.map-popup__iframe.map-popup_iframe--nojs(src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6122088171858!2d30.32330489093596!3d59.93857674840233!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1538679898464" width="100%" height="100%" border="none" allowfullscreen="")
 
     script(src='js/all.min.js')
