--- a/2. Second task/source/sass/blocks/map-popup.scss
+++ b/2. Second task/source/sass/blocks/map-popup.scss
@@ -69,3 +69,19 @@
 .map-popup__iframe {
   border: none;
 }
+
+.map-popup_iframe--nojs {
+  display: none;
+}
+
+// &:hover
+.map-popup__button:hover {
+  color: $text-white;
+  background-color: $text-black;
+}
+
+// &:active
+.map-popup__button:active {
+  color: $text-white;
+  background-color: rgba($text-black, 0.5);
+}
