--- a/2. Second task/source/index.pug
+++ b/2. Second task/source/index.pug
@@ -113,10 +113,11 @@ html(lang="ru")
             li.slider__item
               h3.visually-hidden Слайд с картинкой
 
-        button.slider__button.slider__button--left(type="button")
-          span.visually-hidden Предыдущий слайд
-        button.slider__button.slider__button--right(type="button")
-          span.visually-hidden Следующий слайд
+        .site-wrapper
+          button.slider__button.slider__button--left(type="button")
+            span.visually-hidden Предыдущий слайд
+          button.slider__button.slider__button--right(type="button")
+            span.visually-hidden Следующий слайд
 
       //- Фильтр
       section.main__filter.filter
