--- a/2. Second task/source/sass/blocks/breadcrumbs.scss
+++ b/2. Second task/source/sass/blocks/breadcrumbs.scss
@@ -68,7 +68,8 @@
   .breadcrumbs {
     max-width: 1700px;
     padding-top: 4px;
-    margin: 0 auto;
+    margin-right: auto;
+    margin-left: auto;
   }
 
   .breadcrumbs .site-wrapper {
