--- a/3. Third task/source/sass/mixin.scss
+++ b/3. Third task/source/sass/mixin.scss
@@ -4,6 +4,13 @@
   align-items: $align-items;
 }
 
+@mixin font($font-size, $line-height, $font-weight: $regular, $font-style: normal) {
+  font-size: $font-size + "px";
+  line-height: $line-height + "px";
+  font-weight: $font-weight;
+  font-style: $font-style;
+}
+
 @mixin link($underline: none, $link-color: white) {
   text-decoration: $underline;
   color: $link-color;
