--- a/3. Third task/source/sass/variables.scss
+++ b/3. Third task/source/sass/variables.scss
@@ -1,27 +1,21 @@
 // font-family
-$font-sanspro: "Source Sans Pro", "Arial", sans-serif;
-$font-actor: "Actor", "Arial", sans-serif;
-$font-geomanist: "Geomanist", "Arial", sans-serif;
+$sanspro: "Source Sans Pro", "Arial", sans-serif;
+$actor: "Actor", "Arial", sans-serif;
+$geomanist: "Geomanist", "Arial", sans-serif;
 // font-weight
-$font-regular: 400;
-$font-medium: 500;
-$font-semibold: 600;
-$font-bold: 700;
-// font-style
-$style-normal: normal;
+$regular: 400;
+$medium: 500;
+$semibold: 600;
+$bold: 700;
 // font-size && line-height
 // desktop
-$font-size-desktop: 24px;
-$line-height-desktop: 29px;
+$font-size-desktop: 17px;
+$line-height-desktop: 26px;
 // color
-$text-color: #373737;
-$description-color: #9b9b9b;
-$nav-color: rgba(52, 18, 13, 0.4);
-$form-color: #6fe7cc;
-$radio-btn-color: #a3ebdb;
-$radio-btn-active-color: #ff634d;
-$preview-bg-color: #81ebd3;
-$footer-bg-color: #ff634d;
+$text-color: #1c2e36;
+$placeholder-color: #c2c2c2;
+$header-bg-color: #f2f2f2;
+$form-bg-color: #0084ba;
 $text-white: white;
 $text-black: black;
 // @media
