--- a/3. Third task/source/index.pug
+++ b/3. Third task/source/index.pug
@@ -1,6 +1,6 @@
 //- index.pug
 doctype html
-html(lang="ru")
+html(lang="en")
   head
     meta(charset="utf-8")
     title One World Observator
@@ -18,36 +18,140 @@ html(lang="ru")
 
   body.main-page
 
+    //- Mixins
     //- Declaration
-    mixin list(title, description, index)
-      li.museums__item
-        article.museums__article
-          a.museums__link(href="#")
-            h3.museums__title= title
-          p.museums__description= description
-          a.museums__link(href="#")
-            picture
-              source(type="image/webp" media="(min-width: 960px)" srcset="img/museum-desktop-" + index + ".webp 1x, img/museum-desktop-" + index + ".webp 2x")
-              source(media="(min-width: 960px)" srcset="img/museum-desktop-" + index + ".jpg, img/museum-desktop-" + index + "@2x.jpg 2x")
-              source(type="image/webp" media="(min-width: 768px)" srcset="img/museum-tablet-" + index + ".webp 1x, img/museum-tablet-" + index + ".webp 2x")
-              source(media="(min-width: 768px)" srcset="img/museum-tablet-" + index + ".jpg, img/museum-tablet-" + index + "@2x.jpg 2x")
-              source(type="image/webp" srcset="img/museum-" + index + ".webp 1x, img/museum-" + index + ".webp 2x")
-              img.museums__image(src="img/museum-" + index + ".jpg", alt= title)
-          .museums__input-wrapper
-            input(type="checkbox" name="favorites-" + index id="favorites-" + index)
-            label(for="favorites-" + index)
-              span.visually-hidden Add to favorites
+    mixin ticket-wrapper(description, name)
+        .registration__inner-wrapper
+          p.registration__description= description
 
-    //- Declaration
-    mixin filter(title, id)
-      li.filter-mobile__item
-        input(type="checkbox" name= id id= id)
-        label(for= id)= title
-
-    // Хедер
-    header.main-header
-
-    // Осн.часть
+          .registration__input-wrapper
+            button.registration__button.registration__button--left(type="button")
+            input(type="number" name= name id= name value="0" step="1" aria-label="Add count")
+            button.registration__button.registration__button--right(type="button")
+        
+    // Main
     main.main
+
+      // Introduction
+      section.introduction
+
+        h1.introduction__title One World Observator
+        p.introduction__description Positioned on top of the tallest building in the Western Hemisphere – on levels 100, 101, and 102 of the One World Trade Center building – sits One World Observatory, providing you with unique, panoramic views of New York City, its most iconic sites, and surrounding waters from above 1,250 feet. 
+        img.introduction__image(src="" width="" height="" alt="One World Observator")
+
+      .site-wrapper
+
+        // Page toggle
+        section.toggle
+          h2.visually-hidden Page toggle
+
+          ul.toogle__list
+            li.toogle__item
+              a.toogle__link
+                h3.toogle__title Observatory Admissio
+                p.toogle__description
+                  | from
+                  span $28
+                  | per person
+            li.toogle__item
+              a.toogle__link(href="#")
+                h3.toogle__title Priority Observatory
+                p.toogle__description
+                  | from
+                  span $37
+                  | per person
+
+        // Content
+        section.content
+          h2.content__title One World Observatory Admission
+          h3.content__subtitle Standard Admission to One World Observatory.
+
+          ul.content__list
+
+            each val in ["Overview", "Details", "Reviews (32)", "Map"]
+              li.content__item
+                a.content__link(href="#")= val
+
+            .content__tab
+
+          p.content__description When you arrive at One World Trade Center in Lower Manhattan, hop in a Sky Pod (aka elevator) and arrive on the 102nd floor in less than 60 seconds. The Sky Pod provides a virtual time-lapse experience so you can see how New York City has changed over the centuries.
+          p.content__description If you thought the elevator ride was cool, you'll be blown away by the One World Observatory's vantage point, which on a clear day, provides a sight line of about 50 miles (80 kilometers). Watch a video about the making of the 1,776-foot-tall (540-meter) skyscraper, and then look out the panoramic windows for one-of-a-kind New York City views. Upgrade your experience to priority admission and have your own VIP expedited entry to bypass the general admission lines.
+          p.content__description At the See Forever Theater, see time-lapse photos and aerial imagery during a unique 2-minute video presentation, and then check out the the Main Observatory on the 100th floor, where you can step onto a 14-foot-wide (4-meter) disc in the floor and look down for an incredible perspective of real-time, high-definition footage of Manhattan's streets. And don't leave without stopping by City Pulse, an interactive experience that connects visitors with New York's landmarks and neighborhoods.
+          p.content__description When you're hungry, you can head to the 101st floor for a bite to eat (own expense). Options include pastries and fresh sandwiches at One Café, small plates and artisanal cocktails at the bar, One Mix, and high-end food and wine that matches the stunning view at One Dine (reservations required at One Dine).
+
+        // Registration
+        section.registration
+          h2.visually-hidden Registration form
+
+          form.registration__form(name="registration" action="https://echo.htmlacademy.ru" method="post")
+            p.registration__title From $28
+
+            .registration__wrapper
+              label.registration__subtitle Date
+              input(type="text" name="data" aria-label="Add date")
+
+            .registration__wrapper
+              label.registration__subtitle Tour
+              select(name="tour" aria-label="Add time")
+                option(value="") Select Tour Option
+
+                each val, index in ["Morning", "Mid-Day", "Early Afternoon", "Late Afternoon", "Early Evening", "Late Evening"]
+                  option(value= index)= val
+            
+            .registration__wrapper
+
+              .registration__wrapper
+                h3.registration__subtitle Tickets
+                p.registration__description.registration__description--result Select Tickets 
+
+              .registration__wrapper.registration__wrapper--tickets
+
+                +ticket-wrapper("Adults $28", "adults")
+                +ticket-wrapper("Senior $26", "senior")
+                +ticket-wrapper("Yuth $28", "yuth")
+                +ticket-wrapper("Child Free", "child")
+
+            button.registration__button(type="submit") Book Now
+
+        // Popups
+        // Page scroll
+        .popup-scroll
+          h2.popup-scroll__title One World Observator
+          img.popup-scroll__image(src="" width="" height="" alt="One World Observator")
+
+          p.popup-scroll__description
+            | from $28
+            span per person
+
+        // Form fail
+        .popup-fail  
+          p.popup-fail__description You need to choose at least one adult or senior
+
+        // Form success
+        .popup-success
+          h2.popup-success__title Text to Phone
+          button.popup-success__button.popup-success__button--close 
+            span.visually-hidden Close the popup
+
+          .popup-success__image-wrapper
+            img.popup-scroll__image(src="" width="" height="" alt="One World Observator")
+
+            .popup-success__title-wrapper
+              h3.popup-success__subtitle One World Observatory Admission
+              p.popup-success__description.popup-success__description--price from $26 per person
+
+          p.popup-success__description Text a link to your phone so we can notify you about the event
+          p.popup-success__description You chose:
+
+          ul.popup-success__list
+            li.popup-success__item#adult-popup Adult: 0 person
+            li.popup-success__item#senior-popup Senior: 0 person
+            li.popup-success__item#yuth-popup Yuth: 0 person
+            li.popup-success__item#children-popup Children: 0 person
+            li.popup-success__item.popup-success__item--total Subtotal: $0
+
+          .popup-success__form(name="phone" action="https://echo.htmlacademy.ru" method="post")
+            input(type="phone" name="phone" placeholder="Phone Number" aria-label="Add your phone")
+            button.popup-success__button(type="submit") Book Now
 
     script(src='js/all.min.js')
